[tool.poetry]
name = "num_to_rus"
version = "1.0.0"
description = "Package to convert numbers to russian text"
authors = ["artemowkin <artyom.groshev2017@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
tox = "^3.24.5"
coveralls = "^3.3.1"
build = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
